tests/ui/attrs-resolution-errors.stderr
error: expected non-macro attribute, found attribute macro `test`
  --> $DIR/attrs-resolution-errors.rs:2:7
   |
LL |     #[test]
   |       ^^^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `test`
  --> $DIR/attrs-resolution-errors.rs:8:7
   |
LL |     #[test]
   |       ^^^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `test`
  --> $DIR/attrs-resolution-errors.rs:23:15
   |
LL |             #[test] bar
   |               ^^^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `test`
  --> $DIR/attrs-resolution-errors.rs:30:11
   |
LL |         #[test]
   |           ^^^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `test`
  --> $DIR/attrs-resolution-errors.rs:36:11
   |
LL |         #[test]
   |           ^^^^ not a non-macro attribute

error: aborting due to 5 previous errors

